[tool.poetry]
name = "pqbench"
version = "0.1.0"
description = ""
authors = ["CodeNinja04 <hemendra.sharma@squadstack.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2 = "^2.9.9"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
